# onion-os

./: .clang-format  .gitignore  Makefile  README.md  build.sh  cbr.sh  clean.sh  debug.gdb  export_envs  kernel.debug  linker.ld  makefile  run.sh  setup_cc.sh
C/: entry.c  entry.s  init.c  makefile
C/drivers/: keyboard.c  vga.c
C/interrupt/: idt.c
C/mm/: alloc.c  mem.c  pmm.c  pmm.h
bindsync/: Cargo.toml
bindsync/src/: c_binds.rs  cbinds.rs  main.rs  meta.rs  rust_binds.rs  tracker.rs
efi/: .clangd  loader.c  makefile
efi/src/: loader.c
include/: def.h  idt.h  io.h  kernel.h  mem.h  multiboot.h  vga.h
include/drivers/: keyboard.h  vga.h
include/mm/: alloc.h  mem.h
kernel/: Cargo.toml  build.rs  entry.s  io.s  kernel.c  linker.ld  makefile  mem.c  vga.c
kernel/.cargo/: config.toml  i686.json
kernel/asmc/: centry.c  entry.s
kernel/asmc/drivers/: vga.c
kernel/drivers/: keyboard.c  vga.c
kernel/include/: def.h
kernel/interrupt/: hardware.s  idt.c  ints.s
kernel/mm/: heap.c  mem.c
kernel/src/: binds.rs  def.h  idt.c  ints.s  kernel.c  kernel.h  kmain.rs  mem.c  vga.c
kernel/src/c/: idt.rs  io.rs  kernel.rs  mod.rs  multiboot.rs
kernel/src/c/drivers/: keyboard.rs  mod.rs  vga.rs
kernel/src/c/mm/: alloc.rs  mem.rs  mod.rs
kernel/src/oos/: idt.c  idt.h  mem.h  problem.s  vga.h
kernel/src/oos/io/: io.h
loader/: README.md  boot.s  consts.inc  linker.ld  makefile  stage1.s  stage2.s  tmp_run.sh
loader/src/: boot.asm  boot.s
rust/: Cargo.toml  i686-elf.json  makefile
rust/.cargo/: config.toml
src/: Makefile  boot.asm  kernel.c
(+1 files in other folders)
